cmake_minimum_required(VERSION 3.26)
project(Lab10)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab10 main.cpp
        lab10_1.cpp
        lab10_1.h
        lab10_1_2.cpp
        lab10_1_2.h
        Lab10_2.cpp
        Lab10_2.h
        lab10_3.cpp
        lab10_3.h
        lab10_4.cpp
        lab10_4.h
        lab10_5.cpp
        lab10_5.h)
